# autoanysrc

./: .gitignore  pyproject.toml  setup.py  tox.ini
sphinxcontrib/: autoanysrc.py
tests/: test_functional.py
tests/fixture/: conf.py
