[tool.poetry]
name = "sphinxcontrib-autoanysrc"
version = "0.1.1"
description = "Sphinx extension with some autodoc features for any sources"
authors = ["Evgeniy Tatarkin <tatarkin.evg@gmail.com>"]
license = "BSD"
readme = "README.rst"
repository = "https://github.com/sphinx-contrib/autoanysrc"
keywords = []
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Utilities",
]
packages = [
    { include = "sphinxcontrib" },
]


[tool.poetry.dependencies]
Sphinx = ">=1.6, <5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
black = "^20.0b1"
tox = "^3.24"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.pytest_cache
        |migrations
    )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
