[tool.poetry]
name = "sphinxcontrib-autoanysrc"
version = "0.2.0"
description = "Sphinx extension with some autodoc features for any sources"
authors = ["Evgeniy Tatarkin <tatarkin.evg@gmail.com>"]
license = "BSD"
readme = "README.rst"
repository = "https://github.com/sphinx-contrib/autoanysrc"
keywords = []
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Utilities",
]
packages = [
    { include = "sphinxcontrib" },
]


[tool.poetry.dependencies]
python = "^3.8"
Sphinx = ">=1.6, <8.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
tox = "^4"
virtualenv-pyenv = "^0.5"
ruff = "^0.1"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.pytest_cache
        |migrations
    )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
